--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "ghactionsbootstrap": "node_modules/cloudflare-docs-engine/bin/commands.sh ghactionsbootstrap",
     "build": "node_modules/cloudflare-docs-engine/bin/commands.sh build",
     "develop": "node_modules/cloudflare-docs-engine/bin/commands.sh develop",
-    "savechanges": "node_modules/cloudflare-docs-engine/bin/commands.sh savechanges"
+    "savechanges": "node_modules/cloudflare-docs-engine/bin/commands.sh savechanges",
+    "pages:build": "node_modules/cloudflare-docs-engine/bin/commands.sh bootstrap && node_modules/cloudflare-docs-engine/bin/commands.sh build"
   }
 }
